syntax = "proto3";
package svc.moment;
option go_package = "microsvc/protocol/svc/momentpb";

import "svc/momentpb/enum.proto";

message UpdateReviewStatusReq{
  int64 uid = 1;
  int64 mid = 2;
  ReviewStatus status = 3;
}
message UpdateReviewStatusRes{}

service momentInt {
  rpc UpdateReviewStatus(UpdateReviewStatusReq) returns (UpdateReviewStatusRes);
}
